# voxaris-arrivia-agents

./: .gitignore  .mcp.json  README.md  package.json  render.yaml
apps/agent/: .env.example  Dockerfile  README.md  fly.toml  livekit.toml  pyproject.toml
apps/agent/scripts/: build_objections.py  setup_inbound.py  setup_sip.py  test_sip_call.py
apps/agent/tests/: test_objections.py  test_smoke.py
apps/agent/voxaris_agent/: __init__.py  objections.py  qa.py  worker.py
apps/agent/voxaris_agent/data/: objections.json  qa.json
apps/andie/: .env.example  ANDIE-DOCS-AUDIT.md  Dockerfile  livekit.toml  pyproject.toml
apps/andie/tests/: test_behavior.py  test_smoke.py
apps/andie/voxaris_andie/: objections.py  qa.py  worker.py
apps/andie/voxaris_andie/data/: objections.json  qa.json
apps/web/: README.md
docs/: AGENTS-TRUTH.md  build-plan.md  compliance.md  env.md  xai-voice-agent-api.md
docs/livekit/: README.md  dispatch-rule.md  inbound-trunk.md  inbound-twilio.md  outbound-calls.md  outbound-trunk.md  prompting.md  xai-plugin.md
docs/source/: Arrivia_VBA_Guest_QA_v2.md  OPC_Qualification_Guide.md  VBA_Brief_Final.md  VBA_Pitch_Deck.md  retell_deedy_flow.md
docs/source/gvr/: Bobby_Cox_Sales_Algorithm.md  EndtoEnd_Workflow.md  GVR_Call_Transfer_Script.md  GVR_Call_Transfer_Script_v2.md  GVR_Condensed_Sales_Script.md  GVR_FAQ.md  GVR_Inbound_Call_Script.md  Scope_Confirmation.md  Vacation_Rewards_Flow.md
infra/livekit/: deedy-architecture.md  deedy-livekit.json
infra/livekit/dispatch/: andie-dispatch.json  deedy-dispatch.json
scripts/: check_env.py  deploy-all.sh
supabase/migrations/: .keep
