[project]
name = "voxaris-andie"
version = "0.0.1"
description = "Andie — Arrivia GVR Virtual Member Agent (LiveKit Cloud)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "livekit-agents==1.5.7",
  "livekit-plugins-silero>=1.5",
  "livekit-plugins-noise-cancellation>=0.2",
  "livekit-plugins-deepgram>=1.5",
  "livekit-plugins-rime>=1.5",
  "livekit-plugins-openai>=1.5",
  "livekit-plugins-xai>=1.5",
  "livekit-api>=1.0",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "python-docx>=1.1",
]

[project.scripts]
andie-worker = "voxaris_andie.worker:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["voxaris_andie*"]

[tool.setuptools.package-data]
"voxaris_andie.data" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
